--- a/back-end/package.json
+++ b/back-end/package.json
@@ -8,10 +8,12 @@
   "dependencies": {
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
+     "ejs" : "~0.8.5", 
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "jade": "~1.11.0",
-    "morgan": "~1.7.0",
+    "morgan": "~1.0.0",
+     "express-session": "^1.14.0",
     "serve-favicon": "~2.3.0"
   }
 }
