--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,6 +14,9 @@
     "jade": "~1.11.0",
     "morgan": "~1.0.0",
      "express-session": "^1.14.0",
+     "passport-google-oauth": "^1.0.0",
+     "passport": "^0.3.2",
+     "connect-flash" : "~0.1.1", 
     "serve-favicon": "~2.3.0"
   }
 }
