--- a/back-end/package.json
+++ b/back-end/package.json
@@ -7,16 +7,17 @@
   },
   "dependencies": {
     "body-parser": "~1.15.2",
+    "connect-flash": "~0.1.1",
     "cookie-parser": "~1.4.3",
-     "ejs" : "~0.8.5", 
     "debug": "~2.2.0",
+    "ejs": "~0.8.5",
     "express": "~4.14.0",
+    "express-session": "^1.14.0",
     "jade": "~1.11.0",
+    "mongoose": "^4.7.8",
     "morgan": "~1.0.0",
-     "express-session": "^1.14.0",
-     "passport-google-oauth": "^1.0.0",
-     "passport": "^0.3.2",
-     "connect-flash" : "~0.1.1", 
+    "passport": "^0.3.2",
+    "passport-google-oauth": "^1.0.0",
     "serve-favicon": "~2.3.0"
   }
 }
